--- a/sandbox/build.gradle
+++ b/sandbox/build.gradle
@@ -2,3 +2,12 @@ apply plugin: 'java'
 apply plugin: 'application'
 mainClassName = "MyFirstProgram"
 
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    implementation group: 'org.testng', name: 'testng', version: '7.8.0'
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.7'
+    implementation group: 'org.slf4j', name: 'log4j-over-slf4j', version: '2.0.7'
+}
