--- a/sandbox/build.gradle
+++ b/sandbox/build.gradle
@@ -5,9 +5,21 @@ mainClassName = "MyFirstProgram"
 repositories {
     mavenCentral()
 }
+compileTestJava {
+    options.encoding = 'UTF-8'
+}
+
 
 dependencies {
     implementation group: 'org.testng', name: 'testng', version: '7.8.0'
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.7'
     implementation group: 'org.slf4j', name: 'log4j-over-slf4j', version: '2.0.7'
+    testImplementation(
+            "com.codeborne:selenide:6.11.2",
+            "org.junit.jupiter:junit-jupiter:5.9.2"
+    )
+}
+
+test {
+    useJUnitPlatform {}
 }
