--- a/YoutubeProject/pom.xml
+++ b/YoutubeProject/pom.xml
@@ -17,6 +17,11 @@
       <version>3.141.5</version>
     </dependency>
     <dependency>
+      <groupId>com.typesafe</groupId>
+      <artifactId>config</artifactId>
+      <version>1.4.1</version>
+    </dependency>
+    <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-chrome-driver</artifactId>
       <version>3.141.5</version>
@@ -41,6 +46,13 @@
       <artifactId>junit</artifactId>
       <version>RELEASE</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>5.10.0-RC2</version>
+    </dependency>
+
 
   </dependencies>
 </project>
